--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/avia" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
